[gd_scene load_steps=7 format=3 uid="uid://b2q6ydya38ypk"]

[ext_resource type="Theme" uid="uid://cmh2yrw27laau" path="res://Theme/ControlPanel.tres" id="1_pjdua"]
[ext_resource type="Script" path="res://GameOver.gd" id="2_t06kq"]
[ext_resource type="FontFile" uid="uid://cmhfa7o0n0tfs" path="res://Theme/Inconsolata-VariableFont_wdth,wght.ttf" id="3_p1htj"]

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("3_p1htj")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/64/0 = Vector2(0, 0)
cache/0/24/0/ascent = 0.0
cache/0/24/0/descent = 0.0
cache/0/24/0/underline_position = 0.0
cache/0/24/0/underline_thickness = 0.0
cache/0/24/0/scale = 1.0
cache/0/24/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/64/0 = Vector2(0, 0)
cache/0/64/0/ascent = 0.0
cache/0/64/0/descent = 0.0
cache/0/64/0/underline_position = 0.0
cache/0/64/0/underline_thickness = 0.0
cache/0/64/0/scale = 1.0
cache/0/64/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/64/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/64/0/kerning_overrides/64/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="2"]
fallbacks = Array[Font]([ExtResource("3_p1htj")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/24/0/ascent = 0.0
cache/0/24/0/descent = 0.0
cache/0/24/0/underline_position = 0.0
cache/0/24/0/underline_thickness = 0.0
cache/0/24/0/scale = 1.0
cache/0/24/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/24/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="3"]
fallbacks = Array[Font]([ExtResource("3_p1htj")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/24/0/ascent = 0.0
cache/0/24/0/descent = 0.0
cache/0/24/0/underline_position = 0.0
cache/0/24/0/underline_thickness = 0.0
cache/0/24/0/scale = 1.0
cache/0/24/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/24/0 = Vector2(0, 0)

[node name="GameOver" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 499.0
offset_right = 1440.0
offset_bottom = 900.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_pjdua")
script = ExtResource("2_t06kq")

[node name="Fade" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.607843)

[node name="GameOverLabel" type="Label" parent="Fade"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -288.0
offset_top = -197.0
offset_right = 288.0
offset_bottom = -62.0
theme_override_fonts/font = SubResource("1")
theme_override_font_sizes/font_size = 64
text = "Game Over"
horizontal_alignment = 1

[node name="GeneralMessageLabel" type="Label" parent="Fade/GameOverLabel"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -296.0
offset_top = 9.0
offset_right = 296.0
offset_bottom = 44.0
theme_override_fonts/font = SubResource("2")
theme_override_font_sizes/font_size = 24
text = "You will not be going to space today."
horizontal_alignment = 1

[node name="SpecificMessageLabel" type="Label" parent="Fade/GameOverLabel"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -290.0
offset_top = 269.5
offset_right = 292.0
offset_bottom = 287.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = SubResource("3")
theme_override_font_sizes/font_size = 24
text = "Test message please ignore"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="Fade"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -136.5
offset_top = -202.0
offset_right = 136.5
offset_bottom = -166.0
theme_override_font_sizes/font_size = 18
text = "Restart"

[connection signal="pressed" from="Fade/RestartButton" to="." method="_on_restart_button_pressed"]
